ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: group3-main-ingress
  namespace: apps
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/group.name: group3
spec:
  rules:
  - http:
      paths:
      - path: /a
        pathType: Prefix
        backend:
          service:
            name: service-a
            port:
              number: 80

      - path: /b
        pathType: Prefix
        backend:
          service:
            name: service-b
            port:
              number: 80

      - path: /c
        pathType: Prefix
        backend:
          service:
            name: service-c
            port:
              number: 80
